# Descentroid

./: CMakeLists.txt  Descentroid.code-workspace  buildAndRun.sh  main.cpp
BrodyEngine/: CMakeLists.txt
BrodyEngine/include/: Color.h  EntryPoint.h  Ray.h  Vector3.h
BrodyEngine/include/framework/: Actor.h  Application.h  Core.h  Object.h  World.h
BrodyEngine/src/: EntryPoint.cpp  Vector3.cpp
BrodyEngine/src/framework/: Actor.cpp  Application.cpp  Object.cpp  World.cpp
Descentroid/: CMakeLists.txt  config.h.in
Descentroid/assets/: room_icosphere.mtl
Descentroid/include/: Grid3DActor.h  PlayerShip.h  TestWorld.h  config.h
Descentroid/include/debug/: CrashTestActor.h  Grid3DActor.h  TestWorld.h
Descentroid/include/gameFramework/: GameApplication.h
Descentroid/src/: Grid3DActor.cpp  PlayerShip.cpp  TestWorld.cpp
Descentroid/src/debug/: CrashTestActor.cpp  Grid3DActor.cpp  TestWorld.cpp
Descentroid/src/gameFramework/: GameApplication.cpp
